--- a/main.html
+++ b/main.html
@@ -4,10 +4,35 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
+		<h1 class="card-header">Welcome to Sync5</h1>
+	<div class="card-deck">
+		<div class="card border rounded m-1">
+			<div class="border-bottom px-2">New Features</div>
+				<h4 class="p-2">Mobile and Tablet support</h4>
+				<p class="px-2">With this new update you will be able to sync your work across large number of platforms.</p>
+			  <button type="button" class="btn btn-primary text-wrap m-2 " style="width: 7rem;">Read More</button>
+        </div>
+	<div class="card border rounded m-1 bg-danger" style="width:20rem;">
+		<div class="border-bottom border-secondary p-2">Alert</div>
+		<h4 class="p-2">Node Dead</h4>
+		<p class="p-2">Node 5 (east-us) is offline for the last 12 days.</p>
+	</div>
+		<div class="card border rounded  "style="width: 100%;"">
+			<img class=" card-img-top" src="https://wallpapercave.com/wp/wp3304506.jpg" alt="img-of-sea">
+			<div class="card-body">
+			<h4 class="p-2">President under Pressure</h4>
+			<p class="p-2">The US president is under pressure to respond to a widespread cyber-attack linked to China.</p>
+			<p class="px-2 text-muted my-time">Last updated 12 mins ago</p>
+			</div>
+		</div>
+</div>
 	<!-- the entire body must be written by student -->
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./script.js">
 </script>
 
