--- a/main.html
+++ b/main.html
@@ -11,20 +11,20 @@
 		<h1 class="card-header">Welcome to Sync5</h1>
 	<div class="card-deck">
 		<div class="card border rounded m-1">
-			<div class="border-bottom px-2">New Features</div>
+			<div class="border-bottom px-2  card-title">New Features</div>
 				<h4 class="p-2">Mobile and Tablet support</h4>
 				<p class="px-2">With this new update you will be able to sync your work across large number of platforms.</p>
 			  <button type="button" class="btn btn-primary text-wrap m-2 " style="width: 7rem;">Read More</button>
         </div>
 	<div class="card border rounded m-1 bg-danger" style="width:20rem;">
-		<div class="border-bottom border-secondary p-2">Alert</div>
+		<div class="border-bottom border-secondary  card-title p-2">Alert</div>
 		<h4 class="p-2">Node Dead</h4>
-		<p class="p-2">Node 5 (east-us) is offline for the last 12 days.</p>
+		<p class="p-2 card-body">Node 5 (east-us) is offline for the last 12 days.</p>
 	</div>
 		<div class="card border rounded  "style="width: 100%;"">
 			<img class=" card-img-top" src="https://wallpapercave.com/wp/wp3304506.jpg" alt="img-of-sea">
 			<div class="card-body">
-			<h4 class="p-2">President under Pressure</h4>
+			<h4 class="p-2 card-title">President under Pressure</h4>
 			<p class="p-2">The US president is under pressure to respond to a widespread cyber-attack linked to China.</p>
 			<p class="px-2 text-muted my-time">Last updated 12 mins ago</p>
 			</div>
