--- a/main.html
+++ b/main.html
@@ -8,13 +8,13 @@
 </head>
 
 <body>
-		<h1 class="card-header">Welcome to Sync5</h1>
+		<h1 class="card card-header">Welcome to Sync5</h1>
 	<div class="card-deck">
 		<div class="card border rounded m-1">
 			<div class="border-bottom px-2  card-title">New Features</div>
-				<h4 class="p-2">Mobile and Tablet support</h4>
-				<p class="px-2">With this new update you will be able to sync your work across large number of platforms.</p>
-			  <button type="button" class="btn btn-primary text-wrap m-2 " style="width: 7rem;">Read More</button>
+				<h4 class="p-2 card card-ti">Mobile and Tablet support</h4>
+				<p class="px-2 card card-text">With this new update you will be able to sync your work across large number of platforms.</p>
+			  <button type="button" class="btn btn-primary text-wrap m-2 " style="width: 7rem;">Read more</button>
         </div>
 	<div class="card border rounded m-1 bg-danger" style="width:20rem;">
 		<div class="border-bottom border-secondary  card-title p-2">Alert</div>
