--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 	<div class="card-deck">
 		<div class="card border rounded m-1">
 			<div class="border-bottom px-2  card-title">New Features</div>
-				<h4 class="p-2 card card-ti">Mobile and Tablet support</h4>
+				<h4 class="p-2 card card-header ">Mobile and Tablet support</h4>
 				<p class="px-2 card card-text">With this new update you will be able to sync your work across large number of platforms.</p>
 			  <button type="button" class="btn btn-primary text-wrap m-2 " style="width: 7rem;">Read more</button>
         </div>
